name:           LCCLUtils
version:        0.1
cabal-version:  >=1.2
build-type:     Simple
author:         Maciej Bendkowski
maintainer:     maciej.bendkowski@gmail.com
stability:      experimental
homepage:       https://github.com/maciej-bendkowski/LCCLUtils
category:       Lambda calculus, Combinatory Logic, utilities
license-file:   LICENSE
license:        MIT
copyright:      Maciej Bendkowski

library
  hs-source-dirs:  src
  build-depends:   
                   base >= 4,
                   containers,
                   QuickCheck
  ghc-options:     -Wall
  other-modules:   
                   BCKWTests,
                   BCKWTranslatorTest,
                   CLUtils,
                   CommonUtils,
                   LCTests,
                   Memo,
                   TranslatorTest
  exposed-modules: 
                   BCKW,
                   BCKWTranslator,
                   CL,
                   CLLCTranslator,
                   CLParser,
                   LC,
                   LCParser,
                   ParserUtils,
                   Types

